--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ add_executable(UMLworkshop
         Busticket.h
         Die.h
         Die.cpp
-        View_Square_WithCard.cpp View_Square_WithCard.h)
+        View_Square_WithCard.cpp View_Square_WithCard.h Event_Abstract.cpp Event_Abstract.h)
 target_link_libraries(UMLworkshop
         Qt5::Core
         Qt5::Gui
